Fix file extension in home-page.component.html

--- a/src/app/content/pages/home-page/home-page.component.html
+++ b/src/app/content/pages/home-page/home-page.component.html
@@ -1,6 +1,5 @@
 <div class="card">
-  <img src="./assets/img/HomePage.PNG" alt="foto" class="img-fluid" />
-  <img src="./assets/img/HomePage.PNG" alt="foto" class="img-fluid" />
+  <img src="./assets/img/HomePage.png" alt="foto" class="img-fluid" />
 </div>
 
 <div class="container-fluid">
